--- a/webserver/CMakeLists.txt
+++ b/webserver/CMakeLists.txt
@@ -10,11 +10,14 @@ add_library(libWebServer ${SOURCE_FILES})
 
 add_definitions (-DLIBWEBSERVERVERSION="${PROJECT_VERSION}")
 
-message (STATUS ${CMAKE_CURRENT_SOURCE_DIR})
-message (STATUS ${CMAKE_INSTALL_PREFIX})
+#message (STATUS ${CMAKE_CURRENT_SOURCE_DIR})
+#message (STATUS ${CMAKE_INSTALL_PREFIX})
 
 #allows this library to be included with #include <DIRNAME/FILENAME>
 target_include_directories (libWebServer INTERFACE ../.)
+
+find_package(Threads)
+target_link_libraries (libWebServer ${CMAKE_THREAD_LIBS_INIT})
 
 #target_include_directories (libWebServer INTERFACE ../.
 #        $<BUILD_INTERFACE: ${CMAKE_CURRENT_SOURCE_DIR}>
