--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -3,6 +3,8 @@ cmake_minimum_required(VERSION 3.8)
 set(SOURCE_FILES
         atest.cpp
         Running.cpp
+        URLRequesTests.cpp
+        WebUtilsTest.cpp
         )
 
 find_package(Threads)
