--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(CMAKE_STATIC_LIBRARY_PREFIX "")
 add_compile_options(-Wall -Wextra -pedantic -Werror)
 
 #set code coverage flags for debug builds only
-set(CMAKE_CXX_FLAGS_DEBUG "-fprofile-arcs -ftest-coverage")
+#set(CMAKE_CXX_FLAGS_DEBUG "-fprofile-arcs -ftest-coverage") //breakpoints stop working when added
 
 add_subdirectory(webserver)
 add_subdirectory(TestApps)
