Tidied up baseHeader sending and beginning of url request settings

--- a/webserver/CMakeLists.txt
+++ b/webserver/CMakeLists.txt
@@ -1,10 +1,11 @@
 cmake_minimum_required(VERSION 3.8)
 
 set(SOURCE_FILES
+        IUrlRequestSetting.h
         UrlRequest.cpp
         UrlRequest.h
         WebServer.cpp
-        WebServer.h UrlRequestSetting.cpp UrlRequestSetting.h)
+        WebServer.h )
 
 add_library(libWebServer ${SOURCE_FILES})
 
